--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.2.3",
     "lucide-react": "^0.562.0",
     "@google/genai": "latest",
-    "leaflet": "^1.9.4"
+    "leaflet": "^1.9.4",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
