--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "hamburgueseria-9-3-4",
   "private": true,
@@ -10,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
