--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
+    "isotope-layout": "^3.0.6",
     "leaflet": "^1.9.4",
     "lenis": "^1.3.17",
     "lucide-react": "^0.462.0",
@@ -17,11 +18,16 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/isotope-layout": "^3.0.15",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^25.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   }
